# fastapi-versioner

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bandit-report.json  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
docs/: index.md
docs/user-guide/: basic-usage.md  deprecation.md  installation.md  versioning-strategies.md
examples/advanced/: README.md  main.py  requirements.txt
examples/basic/: README.md  main.py  requirements.txt
examples/enterprise/: main.py  requirements.txt
examples/migration/: README.md  main.py
examples/performance/: main.py  requirements.txt
examples/strategies/: README.md  main.py
examples/testing/: main.py  requirements.txt  test_main.py
scripts/: release.py
src/fastapi_versioner/: __init__.py
src/fastapi_versioner/cli/: __init__.py  commands.py
src/fastapi_versioner/core/: __init__.py  route_collector.py  version_manager.py  versioned_app.py
src/fastapi_versioner/decorators/: __init__.py  deprecated.py  version.py
src/fastapi_versioner/enterprise/: __init__.py  version_ranges.py
src/fastapi_versioner/exceptions/: __init__.py  base.py  versioning.py
src/fastapi_versioner/openapi/: __init__.py  config.py  discovery.py  generator.py  migration.py
src/fastapi_versioner/performance/: __init__.py  cache.py  memory_optimizer.py  metrics.py  monitoring.py
src/fastapi_versioner/security/: __init__.py  audit_logger.py  input_validation.py  rate_limiter.py
src/fastapi_versioner/strategies/: __init__.py  base.py  header.py  query_param.py  url_path.py
src/fastapi_versioner/types/: __init__.py  compatibility.py  config.py  deprecation.py  version.py
tests/: conftest.py  run_tests.py
tests/integration/: test_analytics_enterprise_integration.py  test_end_to_end.py  test_performance_security_integration.py
tests/performance/: test_performance_benchmarks.py
tests/unit/: test_version.py  test_versioned_app.py
tests/unit/test_core/: test_version_manager.py
tests/unit/test_decorators/: test_version_decorator.py
tests/unit/test_performance/: test_cache.py
tests/unit/test_security/: test_input_validation.py
tests/unit/test_strategies/: test_versioning_strategies.py
